@@ -71,6 +71,8 @@ us a note on ns-developers mailing list.</p>
       IPv6 to make an Autoconfigured address.</li>
   <li>IPv6 can now detect and use Path-MTU. See 
       examples/ipv6/fragmentation-ipv6-two-MTU.cc for an example.</li>
+  <li>Radvd application have a new Helper. See the updated 
+      examples/ipv6/radvd.cc for an example.</li>
 </ul>
 
 <h2>Changes to existing API:</h2>
